Issue #19972: Add rarely used freefunc.  This fixes a leak if sys.exit() is used in a program.